pruebas unitarias service de producto, categoria y productoProveedor